use another wrapper

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,7 +38,7 @@ minecraft-kyori = "4.25.0"
 minecraft-luckperms = "5.5"
 minecraft-mcprotocollib = "1.21.7-SNAPSHOT"
 minecraft-mockbukkit = "4.33.2"
-minecraft-mojang-version = "1.21.1"
+minecraft-mojang-version = "1.20.1"
 minecraft-neoforgeversion = "21.1.129"
 minecraft-packetevents = "2.11.0"
 minecraft-papi = "2.11.7"
@@ -48,6 +48,7 @@ minecraft-towny = "0.102.0.0"
 minecraft-vault = "1.7.1"
 minecraft-velocity = "4.0.0-SNAPSHOT"
 minecraft-neoforgegradle = "7.1.11"
+minecraft-forgeversion = "47.2.20"
 telegrambots = "9.2.0"
 tests-junit-bom = "6.0.1"
 tests-junit-jupiter-api = "6.0.1"
